# agentic_CVE_review

./: .gitignore  LICENSE  README.md
cve_review/: Vulnerability_Report.md  critical_cve_results.md  critical_cve_results_2025-01-10.json  cve_logs.txt  high_cve_results.md  high_cve_results_2025-01-10.json  known_exploits_cve_results.md  known_exploits_cve_results_2025-01-10.json  pyproject.toml
cve_review/src/cve_review/: crew.py  main.py
cve_review/src/cve_review/config/: agents.yaml  tasks.yaml
cve_review/src/cve_review/tools/: standalone_cve_review_tool.py
